[dyad] Updating logo and setting Lexend font - wrote 6 file(s)

--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta name="description" content="State-wide digital health backbone enabling secure, standards-based health data exchange across healthcare facilities in Kwara State" />
     <meta name="author" content="Kwara State Ministry of Health" />
 
+    <link rel="icon" type="image/png" href="/Hkit.png" />
+
     <meta property="og:title" content="Hkit - Kwara State Digital Health Infrastructure" />
     <meta property="og:description" content="State-wide digital health backbone enabling secure, standards-based health data exchange" />
     <meta property="og:type" content="website" />
@@ -15,6 +17,10 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Lovable" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lexend:wght@100..900&display=swap" rel="stylesheet">
   </head>
 
   <body>
